Fixed bug #62763 (register_shutdown_function and extending class)